# CrewAI-Customer-Feedback-Analysis

./: README.md  pyproject.toml
reports/: feedback_analysis_report.md  research_report.md  sentiment_report.md
src/customer_feedback_analysis_system/: crew.py  main.py
src/customer_feedback_analysis_system/config/: agents.yaml  tasks.yaml
