[project]
name = "customer_feedback_analysis_system"
version = "0.1.0"
description = "customer-feedback-analysis-system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
customer_feedback_analysis_system = "customer_feedback_analysis_system.main:run"
run_crew = "customer_feedback_analysis_system.main:run"
train = "customer_feedback_analysis_system.main:train"
replay = "customer_feedback_analysis_system.main:replay"
test = "customer_feedback_analysis_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
